Fixed the vertical alignment of the left/right arrows for “Opinions about…” a candidate. Fixes Issue #1500.

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -32,6 +32,7 @@ $space-xxs:  2px;
 $space-xs:   4px;
 $space-sm:   8px;
 $space-md:  16px;
+$negative-space-sm: (-$space-sm);
 $negative-space-md: (-$space-md);
 $space-lg:  32px;
 $space-xl:  64px;
