--- a/src/sass/components/_network-positions.scss
+++ b/src/sass/components/_network-positions.scss
@@ -162,6 +162,7 @@
     $list-height: 76px;
     $list-height-visible: $list-height - $scrollbar-height;
     $scroll-icon-margin: $space-none $space-sm;
+    $scroll-icon-small-margin: $space-none 13px;
     $support-list-margin-left: -36px;
     $support-list-margin-right: -16px;
     margin-left: $support-list-margin-left;
@@ -196,14 +197,34 @@
     &__scroll-icon {
       color: $gray-mid;
       margin: $scroll-icon-margin;
+      margin-top: $space-xs;
+      @include breakpoints (medium) {
+        margin-top: $space-md;
+      }
 
-      &-disabled {
+      &--small {
+        @include breakpoints (0 medium) {
+          margin-top: $negative-space-sm;
+        }
+      }
+
+      &--disabled {
         color: $transparent;
         margin: $scroll-icon-margin;
+      }
+
+      &--disabled-small {
+        color: $transparent;
+        margin: $scroll-icon-small-margin;
       }
     }
   }
 }
 
-.red-bar { background-color: $red; }
-.green-bar { background-color: $green; }
+.red-bar {
+  background-color: $red;
+}
+
+.green-bar {
+  background-color: $green;
+}
